[gd_scene load_steps=12 format=3 uid="uid://dchr5es6o6ida"]

[ext_resource type="Script" uid="uid://cw15j5pj37ba7" path="res://scripts/UI/ui.gd" id="1_5en4g"]
[ext_resource type="Texture2D" uid="uid://b7k8w444xyqox" path="res://assets/sprites/hearts/Red Heart.png" id="1_dj8aq"]
[ext_resource type="Theme" uid="uid://d8uuw1d6d7be" path="res://assets/label.tres" id="1_ktti3"]
[ext_resource type="Texture2D" uid="uid://culnoxofg3gmk" path="res://assets/sprites/bomb/Bomb.png" id="2_ro3t7"]
[ext_resource type="Texture2D" uid="uid://dkydi42h41a5q" path="res://assets/sprites/hearts/Gray Heart.png" id="3_ua6yw"]
[ext_resource type="Script" uid="uid://cd1n6tkj0bmrm" path="res://scripts/UI/boss_inbound_text.gd" id="5_cgfq5"]
[ext_resource type="StyleBox" uid="uid://cb6g0g1wx2arx" path="res://assets/darkBlueStyleBoxFlat.tres" id="5_wm3ai"]
[ext_resource type="Script" uid="uid://dc4v3o4waybsu" path="res://scripts/UI/controlButton.gd" id="6_8dubc"]
[ext_resource type="Script" uid="uid://bvb213t76vk3i" path="res://scripts/UI/volumeSlider.gd" id="7_p7vwb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ro3t7"]
bg_color = Color(0.7411765, 0.76862746, 0.80784315, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5en4g"]
bg_color = Color(0.92445606, 0.44463834, 0, 1)

[node name="UI" type="Control" node_paths=PackedStringArray("timeLabel", "bombPBar", "bombLabel", "mainPausePanel", "optionsPanel", "controlsPanel", "waveProgressLabel", "waveProgressBar", "audioPanel")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ktti3")
script = ExtResource("1_5en4g")
full_heart = ExtResource("1_dj8aq")
empty_heart = ExtResource("3_ua6yw")
timeLabel = NodePath("mainUIPanelContainer/GridContainer/TimeLabel")
bombPBar = NodePath("mainUIPanelContainer/BombContainer/BombBar")
bombLabel = NodePath("mainUIPanelContainer/BombContainer/BombCountLabel")
mainPausePanel = NodePath("mainPausePanel")
optionsPanel = NodePath("mainPausePanel/optionsPanel")
controlsPanel = NodePath("mainPausePanel/optionsPanel/controlsPanel")
waveProgressLabel = NodePath("WaveProgressBar/WaveProgressLabel")
waveProgressBar = NodePath("WaveProgressBar/WaveProgressBar")
audioPanel = NodePath("mainPausePanel/optionsPanel/AudioPanel")

[node name="WaveProgressBar" type="GridContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -57.0
offset_right = 57.0
offset_bottom = 47.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="WaveProgressLabel" type="Label" parent="WaveProgressBar"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("1_ktti3")
text = "Wave Progress"

[node name="WaveProgressBar" type="ProgressBar" parent="WaveProgressBar"]
process_mode = 3
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ro3t7")
theme_override_styles/fill = SubResource("StyleBoxFlat_5en4g")
show_percentage = false

[node name="BossInboundText" type="Label" parent="WaveProgressBar"]
process_mode = 3
visible = false
layout_mode = 2
theme = ExtResource("1_ktti3")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_cgfq5")

[node name="BossInboundTestButton" type="Button" parent="WaveProgressBar"]
visible = false
layout_mode = 2
text = "TEST TEST TEST"

[node name="mainUIPanelContainer" type="PanelContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -154.0
grow_horizontal = 0
grow_vertical = 2

[node name="HeartContainer" type="GridContainer" parent="mainUIPanelContainer"]
process_mode = 3
layout_mode = 2

[node name="HeartTexture" type="TextureRect" parent="mainUIPanelContainer/HeartContainer" groups=["heartsGroup"]]
process_mode = 3
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_dj8aq")
expand_mode = 2
stretch_mode = 4

[node name="HeartTexture2" type="TextureRect" parent="mainUIPanelContainer/HeartContainer" groups=["heartsGroup"]]
process_mode = 3
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_dj8aq")
expand_mode = 2
stretch_mode = 4

[node name="HeartTexture3" type="TextureRect" parent="mainUIPanelContainer/HeartContainer" groups=["heartsGroup"]]
process_mode = 3
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_dj8aq")
expand_mode = 2
stretch_mode = 4

[node name="HeartTexture4" type="TextureRect" parent="mainUIPanelContainer/HeartContainer" groups=["heartsGroup"]]
process_mode = 3
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_dj8aq")
expand_mode = 2
stretch_mode = 4

[node name="HeartTexture5" type="TextureRect" parent="mainUIPanelContainer/HeartContainer" groups=["heartsGroup"]]
process_mode = 3
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_dj8aq")
expand_mode = 2
stretch_mode = 4

[node name="HeartTexture6" type="TextureRect" parent="mainUIPanelContainer/HeartContainer" groups=["heartsGroup"]]
process_mode = 3
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_dj8aq")
expand_mode = 2
stretch_mode = 4

[node name="BombContainer" type="GridContainer" parent="mainUIPanelContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
columns = 2

[node name="BombTexture" type="TextureRect" parent="mainUIPanelContainer/BombContainer"]
process_mode = 3
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_ro3t7")
expand_mode = 2
stretch_mode = 4

[node name="BombBar" type="ProgressBar" parent="mainUIPanelContainer/BombContainer"]
process_mode = 3
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ro3t7")
theme_override_styles/fill = SubResource("StyleBoxFlat_5en4g")

[node name="BombCountLabel" type="Label" parent="mainUIPanelContainer/BombContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "x0"

[node name="GridContainer" type="GridContainer" parent="mainUIPanelContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TimeTextLabel" type="Label" parent="mainUIPanelContainer/GridContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "TIME"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="mainUIPanelContainer/GridContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "00:00:00"

[node name="mainPausePanel" type="PanelContainer" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="mainPausePanel"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="pauseTextLabel" type="Label" parent="mainPausePanel/GridContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 100
text = "PAUSE"

[node name="resumeButton" type="Button" parent="mainPausePanel/GridContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Resume"

[node name="optionButton" type="Button" parent="mainPausePanel/GridContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Options"

[node name="quitButton" type="Button" parent="mainPausePanel/GridContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Quit"

[node name="optionsPanel" type="PanelContainer" parent="mainPausePanel"]
process_mode = 3
visible = false
layout_mode = 2
theme_override_styles/panel = ExtResource("5_wm3ai")

[node name="GridContainer" type="GridContainer" parent="mainPausePanel/optionsPanel"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="optionsLabel" type="Label" parent="mainPausePanel/optionsPanel/GridContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 100
text = "OPTIONS"

[node name="optionscontrolButton" type="Button" parent="mainPausePanel/optionsPanel/GridContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Controls"

[node name="optionsaudioButton" type="Button" parent="mainPausePanel/optionsPanel/GridContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Audio"

[node name="optionsbackButton" type="Button" parent="mainPausePanel/optionsPanel/GridContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Back"

[node name="controlsPanel" type="PanelContainer" parent="mainPausePanel/optionsPanel"]
process_mode = 3
visible = false
layout_mode = 2
theme_override_styles/panel = ExtResource("5_wm3ai")

[node name="GridContainer" type="GridContainer" parent="mainPausePanel/optionsPanel/controlsPanel"]
process_mode = 3
layout_mode = 2

[node name="controlsLabel" type="Label" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Controls"

[node name="VBoxContainer" type="VBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer"]
process_mode = 3
layout_mode = 2

[node name="mainCharacterMovementFoldable" type="FoldableContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
folded = true
title = "Main Character Movement"

[node name="VBoxContainer" type="VBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable"]
process_mode = 3
visible = false
layout_mode = 2

[node name="moveUpControls" type="HBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="Label" type="Label" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer/moveUpControls"]
process_mode = 3
layout_mode = 2
text = "Move Up"

[node name="charMoveUpButton" type="Button" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer/moveUpControls"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("6_8dubc")
control_name = "MainPlayerMoveUp"

[node name="moveDownControls" type="HBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="Label" type="Label" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer/moveDownControls"]
process_mode = 3
layout_mode = 2
text = "Move Down"

[node name="charMoveDownButton" type="Button" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer/moveDownControls"]
process_mode = 3
layout_mode = 2
script = ExtResource("6_8dubc")
control_name = "MainPlayerMoveDown"

[node name="moveLeftControls" type="HBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="Label" type="Label" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer/moveLeftControls"]
process_mode = 3
layout_mode = 2
text = "Move Left"

[node name="charMoveLeftButton" type="Button" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer/moveLeftControls"]
process_mode = 3
layout_mode = 2
script = ExtResource("6_8dubc")
control_name = "MainPlayerMoveLeft"

[node name="moveRightControls" type="HBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="Label" type="Label" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer/moveRightControls"]
process_mode = 3
layout_mode = 2
text = "Move Right"

[node name="charMoveRightButton" type="Button" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer/moveRightControls"]
process_mode = 3
layout_mode = 2
script = ExtResource("6_8dubc")
control_name = "MainPlayerMoveRight"

[node name="moveFast" type="HBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="Label" type="Label" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer/moveFast"]
process_mode = 3
layout_mode = 2
text = "Fast Move"

[node name="charMoveFastButton" type="Button" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer/moveFast"]
process_mode = 3
layout_mode = 2
script = ExtResource("6_8dubc")
control_name = "FastWalk"

[node name="moveSlow" type="HBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="Label" type="Label" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer/moveSlow"]
process_mode = 3
layout_mode = 2
text = "Slow Walk"

[node name="charMoveSlowButton" type="Button" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/mainCharacterMovementFoldable/VBoxContainer/moveSlow"]
process_mode = 3
layout_mode = 2
script = ExtResource("6_8dubc")
control_name = "SlowWalk"

[node name="sawCharacterMovementFoldable" type="FoldableContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
folded = true
title = "Saw Character Movement"

[node name="VBoxContainer" type="VBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/sawCharacterMovementFoldable"]
process_mode = 3
visible = false
layout_mode = 2

[node name="moveUpControls" type="HBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/sawCharacterMovementFoldable/VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="Label" type="Label" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/sawCharacterMovementFoldable/VBoxContainer/moveUpControls"]
process_mode = 3
layout_mode = 2
text = "Move Up"

[node name="sawMoveUpButton" type="Button" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/sawCharacterMovementFoldable/VBoxContainer/moveUpControls"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("6_8dubc")
control_name = "SawPlayerMoveUp"

[node name="moveDownControls" type="HBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/sawCharacterMovementFoldable/VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="Label" type="Label" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/sawCharacterMovementFoldable/VBoxContainer/moveDownControls"]
process_mode = 3
layout_mode = 2
text = "Move Down"

[node name="sawMoveDownButton" type="Button" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/sawCharacterMovementFoldable/VBoxContainer/moveDownControls"]
process_mode = 3
layout_mode = 2
script = ExtResource("6_8dubc")
control_name = "SawPlayerMoveDown"

[node name="moveLeftControls" type="HBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/sawCharacterMovementFoldable/VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="Label" type="Label" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/sawCharacterMovementFoldable/VBoxContainer/moveLeftControls"]
process_mode = 3
layout_mode = 2
text = "Move Left"

[node name="sawMoveLeftButton" type="Button" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/sawCharacterMovementFoldable/VBoxContainer/moveLeftControls"]
process_mode = 3
layout_mode = 2
script = ExtResource("6_8dubc")
control_name = "SawPlayerMoveLeft"

[node name="moveRightControls" type="HBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/sawCharacterMovementFoldable/VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="Label" type="Label" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/sawCharacterMovementFoldable/VBoxContainer/moveRightControls"]
process_mode = 3
layout_mode = 2
text = "Move Right"

[node name="sawMoveRightButton" type="Button" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/sawCharacterMovementFoldable/VBoxContainer/moveRightControls"]
process_mode = 3
layout_mode = 2
script = ExtResource("6_8dubc")
control_name = "SawPlayerMoveRight"

[node name="otherFoldable" type="FoldableContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
folded = true
title = "Miscellaneous Controls"

[node name="VBoxContainer" type="VBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/otherFoldable"]
process_mode = 3
visible = false
layout_mode = 2

[node name="UseBombControls" type="HBoxContainer" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/otherFoldable/VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="Label" type="Label" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/otherFoldable/VBoxContainer/UseBombControls"]
process_mode = 3
layout_mode = 2
text = "Use Bomb"

[node name="useBombButton" type="Button" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer/VBoxContainer/otherFoldable/VBoxContainer/UseBombControls"]
process_mode = 3
layout_mode = 2
script = ExtResource("6_8dubc")
control_name = "UseBomb"

[node name="controlsBackButton" type="Button" parent="mainPausePanel/optionsPanel/controlsPanel/GridContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 4
text = "Back"

[node name="AudioPanel" type="PanelContainer" parent="mainPausePanel/optionsPanel"]
process_mode = 3
visible = false
layout_mode = 2
theme_override_styles/panel = ExtResource("5_wm3ai")

[node name="GridContainer" type="GridContainer" parent="mainPausePanel/optionsPanel/AudioPanel"]
process_mode = 3
layout_mode = 2

[node name="MasterGridContainer" type="GridContainer" parent="mainPausePanel/optionsPanel/AudioPanel/GridContainer"]
process_mode = 3
layout_mode = 2

[node name="MasterLabel" type="Label" parent="mainPausePanel/optionsPanel/AudioPanel/GridContainer/MasterGridContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 0
text = "Master Volume"

[node name="MasterHSlider" type="HSlider" parent="mainPausePanel/optionsPanel/AudioPanel/GridContainer/MasterGridContainer" node_paths=PackedStringArray("volSlider")]
process_mode = 3
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
script = ExtResource("7_p7vwb")
volSlider = NodePath(".")
selectedBus = "Master"

[node name="audioBackButton" type="Button" parent="mainPausePanel/optionsPanel/AudioPanel/GridContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 4
text = "Back"

[connection signal="bossInbound" from="." to="WaveProgressBar/BossInboundText" method="activate_label"]
[connection signal="pressed" from="WaveProgressBar/BossInboundTestButton" to="WaveProgressBar/BossInboundText" method="activate_label"]
[connection signal="pressed" from="mainPausePanel/GridContainer/resumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="mainPausePanel/GridContainer/optionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="mainPausePanel/GridContainer/quitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="mainPausePanel/optionsPanel/GridContainer/optionscontrolButton" to="." method="_on_optionscontrol_button_pressed"]
[connection signal="pressed" from="mainPausePanel/optionsPanel/GridContainer/optionsaudioButton" to="." method="_on_optionsaudio_button_pressed"]
[connection signal="pressed" from="mainPausePanel/optionsPanel/GridContainer/optionsbackButton" to="." method="_on_optionsback_button_pressed"]
[connection signal="pressed" from="mainPausePanel/optionsPanel/controlsPanel/GridContainer/controlsBackButton" to="." method="_on_controls_back_button_pressed"]
[connection signal="pressed" from="mainPausePanel/optionsPanel/AudioPanel/GridContainer/audioBackButton" to="." method="_on_audio_back_button_pressed"]
